src/test/ui/typeck/typeck-default-trait-impl-send-param.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-send-param.rs:5:15
   |
LL |     is_send::<T>()
   |               ^ `T` cannot be sent between threads safely
...
LL | fn is_send<T:Send>() {
   |              ---- required by this bound in `is_send`
   |
   = help: the trait `std::marker::Send` is not implemented for `T`
help: consider restricting type parameter `T`
   |
LL | fn foo<T: std::marker::Send>() {
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
